--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.utsa.cs3443</groupId>
-    <artifactId>gfj947_lab4</artifactId>
+    <groupId>utsaclass</groupId>
+    <artifactId>abc123</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -72,7 +72,7 @@
                     <execution>
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.cain.green.javafxlogindashboard.Launcher</mainClass>
+                            <mainClass>com.first.last.javafxlogindashboard.Launcher</mainClass>
                         </configuration>
                     </execution>
                 </executions>
